[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "car-rental"
version = "0.1.0"
description = "A car rental management system with real-time GPS tracking for vehicles."
readme = "README.md"
requires-python = ">=3.13.5"
authors = [{ name = "Khemmachat Thongkhum", email = "270616965@yoobeestudent.ac.nz" }]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["cgps*", "mock_gps*"]

[project.scripts]
cgps = "cgps.__main__:main"
cgps-db = "cgps.__db__:main"
mock-gps = "mock_gps.__main__:main"